feat(download-history): add Download Time and Average Speed to details dialog
- Add downloadTimeMillis and averageSpeedBytesPerSec columns to DownloadedVideoInfo
- Bump Room DB version 5 → 6 with AutoMigration (existing rows default to -1)
- Capture precise start/end timestamps around YoutubeDL.execute() in DownloadUtil
- Compute average speed from file size ÷ elapsed time (covers V1 & V2 downloaders)
- Display Download Time (e.g. 2m 34s) and Average Speed (e.g. 3.2 MB/s) in
  VideoDetailDrawer with Timer/Speed icons; section hidden for old entries

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,8 @@
     <string name="channel_description">Notify of downloaded files and progress</string>
     <string name="video_url">Video link</string>
     <string name="download_finish_notification">Download finished. Tap to open.</string>
+    <string name="download_time">Download Time</string>
+    <string name="average_speed">Average Speed</string>
     <string name="execute_command_notification">Running custom commands…</string>
     <string name="battery_settings_desc">"Please set battery usage of this app to \"Unrestricted\" in the system settings to download in the background."
     </string>
