feat: periodic sponsor support dialog with schedule control
- Add SponsorSupportDialog: glassmorphism card, gradient icon badge,
  feature rows, animated entrance (spring scale + tween alpha),
  'Support Us' gradient button + 'Maybe Later' text button
- Add SPONSOR_DIALOG_FREQUENCY (Off/Weekly/Monthly, default Weekly) and
  SPONSOR_DIALOG_LAST_SHOWN preferences to PreferenceUtil
- Add 'Support & Sponsorship' section in SealPlusExtrasPage with
  SponsorFrequencyDialog single-choice picker (Off / Weekly / Monthly)
- Wire into NewHomePage: LaunchedEffect checks interval on every app
  open, shows dialog after 600 ms delay (permissions dialogs first),
  persists last-shown timestamp so timing survives restarts
- Add all required string resources (title, subtitle, message,
  feature labels, button labels, frequency options)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -631,6 +631,22 @@
     <string name="proxy_info_title">How It Works</string>
     <string name="proxy_info_description">When enabled, all download requests will be routed through the configured proxy server. This can help bypass regional restrictions or improve privacy. Test the connection before enabling to ensure the proxy is working correctly.</string>
     
+    <!-- Sponsor Support Dialog -->
+    <string name="support_us">Support Us ✨</string>
+    <string name="maybe_later">Maybe Later</string>
+    <string name="sponsor_dialog_title">Keep Seal Plus Free &amp; Thriving</string>
+    <string name="sponsor_dialog_subtitle">Powered by your support</string>
+    <string name="sponsor_dialog_message">Seal Plus is built with passion — free, open-source, and ad-free. Your support helps fund active development, faster updates, better performance, and exciting new features. Every contribution, big or small, makes a real difference.</string>
+    <string name="sponsor_dialog_frequency_title">Support Reminder</string>
+    <string name="sponsor_dialog_frequency_desc">Choose how often to show the sponsor reminder</string>
+    <string name="sponsor_dialog_off">Off</string>
+    <string name="sponsor_dialog_weekly">Weekly</string>
+    <string name="sponsor_dialog_monthly">Monthly</string>
+    <string name="sponsor_support_section">Support &amp; Sponsorship</string>
+    <string name="sponsor_feature_updates">Active development &amp; updates</string>
+    <string name="sponsor_feature_performance">Performance improvements</string>
+    <string name="sponsor_feature_features">New features &amp; bug fixes</string>
+
     <!-- Permission strings -->
     <string name="notification_permission_required">Notification Permission Required</string>
     <string name="notification_permission_desc">Seal Plus needs notification permission to show download progress and completion status. Please grant this permission for the best experience.</string>
